Fix margin-bottom in cardContainer class for consistent spacing

--- a/src/Components/shop/card/ProductCard.module.css
+++ b/src/Components/shop/card/ProductCard.module.css
@@ -1,5 +1,6 @@
 .cardContainer {
   width: 260px;
+  margin-bottom: 40px;
 }
 
 .link {
